<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvHistory"
        app:navGraph="@navigation/nav_graph"
        app:defaultNavHost="true" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="30sp"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"
        android:background="@color/lightGrey"/>

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="40sp"
        android:textStyle="bold"
        android:minHeight="64dp"
        android:layout_marginBottom="24dp"
        android:background="@color/lightGrey"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="4"
        android:rowCount="6">

        <!-- Row 1 -->
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/clearBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btnParenLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/leftParenBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btnParenRight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/rightParenBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btnExponent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/exponentBtn"
            android:textSize="40dp"/>

        <!-- Row 2 -->
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/sevenBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/eightBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/nineBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/divideBtn"
            android:textSize="48dp"/>



        <!-- Row 3 -->
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/fourBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/fiveBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/sixBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/multiplyBtn"
            android:textSize="48dp"/>



        <!-- Row 4 -->
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/oneBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/twoBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/threeBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/minusBtn"
            android:textSize="48dp"/>


        <!-- Row 5 -->
        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:layout_columnSpan="2"
            android:text="@string/zeroBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/decimalBtn"
            android:textSize="48dp"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/addBtn"
            android:textSize="48dp"/>



        <!-- Row 6 -->
        <Button
            android:id="@+id/btnShowSteps"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/showStepsLabel"
            android:textSize="25dp"
            android:layout_columnSpan="2"
            android:backgroundTint="@color/orange"/>

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="4dp"
            android:text="@string/equalsBtn"
            android:textSize="48dp"
            android:layout_columnSpan="2"/>

    </GridLayout>



</LinearLayout>